# telma

./: .gitignore  Makefile  README.md  _config.yaml  main.ipynb  pyproject.toml
_layouts/: default.html
telma/: __init__.py  tool.py  toolkit.py
telma/evaluators/: __init__.py  evaluator.py  similarity.py  simple.py
